version/0.20/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.ListObject.rst.txt
ansys.fluent.core.solver.flobject.ListObject
============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: ListObject

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~ListObject.__init__
      ~ListObject.after_execute
      ~ListObject.before_execute
      ~ListObject.find_object
      ~ListObject.get_attr
      ~ListObject.get_attrs
      ~ListObject.get_size
      ~ListObject.get_state
      ~ListObject.is_active
      ~ListObject.is_read_only
      ~ListObject.print_state
      ~ListObject.set_flproxy
      ~ListObject.set_state
      ~ListObject.state_with_units
      ~ListObject.to_python_keys
      ~ListObject.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ListObject.command_names
      ~ListObject.file_transfer_service
      ~ListObject.flproxy
      ~ListObject.fluent_name
      ~ListObject.obj_name
      ~ListObject.parent
      ~ListObject.path
      ~ListObject.python_name
      ~ListObject.python_path
      ~ListObject.query_names
   
   